[feat] 시큐리티 설정 적용 (#118)
* refactor: 권한 확인 로직 수정 및 권한 계층 적용

* refactor: RoleBasedUserArgumentResolver 반환값 Entity -> DTO 변경

* style: lint 적용

* refactor: 관리자 API에 Auth 적용

* refactor: 사용자 API에 Auth 적용

* refactor: authentication 설정 제거

- Resolver로 제어

* refactor: 코드 정리

* resolve conflict

* docs: 서버 api2로 변경
